[build-system]
requires = [
    "setuptools",
    "scikit-build>=0.13",
    "cmake",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "mtsespy"
version = "1.0.0"
description = "Python bindings for ODDSound MTS-ESP"
authors = [
  { name="Naren Ratan" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/narenratan/mtsespy"
Issues = "https://github.com/narenratan/mtsespy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
