[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "mtsespy"
version = "1.0.0"
description = "Python bindings for ODDSound MTS-ESP"
authors = [
  { name="Naren Ratan" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/narenratan/mtsespy"
Issues = "https://github.com/narenratan/mtsespy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "wheel: Tests which work without libMTS (run during isolated wheel builds)",
]
